Fixed: Should allow different origin when allow origin is *

--- a/test/fixtures/components/app-ajax/template.marko
+++ b/test/fixtures/components/app-ajax/template.marko
@@ -24,6 +24,10 @@
         w-onClick="makeXhrPatchCall">
         Do Xhr Patch Request
     </button>
+    <button type="button"
+        w-onClick="makeXhrOriginAllCall">
+        Do Xhr Origin All Request
+    </button>
 
     <div>
         total time: ${data.time} ms
