Fixed: the handler fails to handle 2XX responses

--- a/test/fixtures/components/app-ajax/template.marko
+++ b/test/fixtures/components/app-ajax/template.marko
@@ -28,6 +28,10 @@
         w-onClick="makeXhrOriginAllCall">
         Do Xhr Origin All Request
     </button>
+    <button type="button"
+        w-onClick="makeXhr204Call">
+        Do Xhr 204 Request
+    </button>
 
     <div>
         total time: ${data.time} ms
